# VideoAnalogiser

./: .gitignore  CMakeLists.txt  CMakePresets.json  GUIDANCE.md  Makefile  README.md  VideoAnalogiser.kdev4
VideoAnalogiser/: BroadcastStandard.cpp  BroadcastStandard.h  CMakeLists.txt  ColourSystem.cpp  ColourSystem.h  ConversionEngine.cpp  ConversionEngine.h  MultiOctaveNoiseGen.cpp  MultiOctaveNoiseGen.h  NTSCSystem.cpp  NTSCSystem.h  PALSystem.cpp  PALSystem.h  SECAMSystem.cpp  SECAMSystem.h  Utils.cpp  Utils.h  VideoAnalogiser.cpp
VideoAnalogiser/ffmpeg/libavcodec/: avcodec.h  codec.h  codec_desc.h  codec_id.h  codec_par.h  packet.h  version.h
VideoAnalogiser/ffmpeg/libavformat/: avformat.h  avio.h  version.h
VideoAnalogiser/ffmpeg/libavutil/: macros.h  pixfmt.h
VideoAnalogiser/ffmpeg/libswresample/: swresample.h  version.h
VideoAnalogiser/ffmpeg/libswscale/: swscale.h  version.h
src/: BroadcastStandard.cpp  BroadcastStandard.h  ColourSystem.cpp  ColourSystem.h  ConversionEngine.cpp  ConversionEngine.h  NTSCSystem.cpp  NTSCSystem.h  PALSystem.cpp  PALSystem.h  SECAMSystem.cpp  SECAMSystem.h  Utils.cpp  Utils.h  VHSFont.cpp  VHSFont.h  VideoAnalogiser.cpp  VideoAnalogiser.h
src/ffmpeg/libavcodec/: codec.h
src/ffmpeg/libavformat/: avformat.h  avio.h
src/ffmpeg/libswresample/: version.h
src/ffmpeg/libswscale/: version.h
