# CMakeList.txt : CMake project for VideoAnalogiser, include source and define
# project specific logic here.
#

# Add source to this project's executable.
add_executable (VideoAnalogiser "VideoAnalogiser.cpp" "VideoAnalogiser.h" "BroadcastStandard.cpp" "BroadcastStandard.h" "ColourSystem.cpp" "ColourSystem.h" "PALSystem.cpp" "PALSystem.h" "Utils.cpp" "Utils.h" "ConversionEngine.cpp" "ConversionEngine.h" "NTSCSystem.cpp" "NTSCSystem.h" "SECAMSystem.cpp" "SECAMSystem.h" "MultiOctaveNoiseGen.cpp" "MultiOctaveNoiseGen.h")

if (CMAKE_VERSION VERSION_GREATER 3.12)
  set_property(TARGET VideoAnalogiser PROPERTY CXX_STANDARD 20)
endif()

if (MSVC)
  set_property(TARGET VideoAnalogiser PROPERTY COMPILE_OPTIONS -openmp:experimental)
else()
  set_property(TARGET VideoAnalogiser PROPERTY COMPILE_OPTIONS -fopenmp)
  set_property(TARGET VideoAnalogiser PROPERTY LINK_OPTIONS -no-pie)
endif()

if (CMAKE_HOST_WIN32)
  target_link_libraries (VideoAnalogiser PUBLIC "${PROJECT_SOURCE_DIR}/lib/avcodec.lib")
  target_link_libraries (VideoAnalogiser PUBLIC "${PROJECT_SOURCE_DIR}/lib/avformat.lib")
  target_link_libraries (VideoAnalogiser PUBLIC "${PROJECT_SOURCE_DIR}/lib/avutil.lib")
  target_link_libraries (VideoAnalogiser PUBLIC "${PROJECT_SOURCE_DIR}/lib/swresample.lib")
  target_link_libraries (VideoAnalogiser PUBLIC "${PROJECT_SOURCE_DIR}/lib/swscale.lib")
elseif(CMAKE_HOST_UNIX)
  target_link_libraries (VideoAnalogiser PUBLIC ":libgomp.so.1")
  target_link_libraries (VideoAnalogiser PUBLIC ":libavcodec.a")
  target_link_libraries (VideoAnalogiser PUBLIC ":libavformat.a")
  target_link_libraries (VideoAnalogiser PUBLIC ":libavutil.a")
  target_link_libraries (VideoAnalogiser PUBLIC ":libswresample.a")
  target_link_libraries (VideoAnalogiser PUBLIC ":libswscale.a")
  target_link_libraries (VideoAnalogiser PUBLIC ":libavcodec.so")
  target_link_libraries (VideoAnalogiser PUBLIC ":libavformat.so")
  target_link_libraries (VideoAnalogiser PUBLIC ":libavutil.so")
  target_link_libraries (VideoAnalogiser PUBLIC ":libswresample.so")
  target_link_libraries (VideoAnalogiser PUBLIC ":libswscale.so")
  target_link_libraries (VideoAnalogiser PUBLIC ":libvpx.so.7")
  target_link_libraries (VideoAnalogiser PUBLIC ":libwebpmux.so.3")
  target_link_libraries (VideoAnalogiser PUBLIC ":libwebp.so.7")
  target_link_libraries (VideoAnalogiser PUBLIC ":liblzma.so.5")
  target_link_libraries (VideoAnalogiser PUBLIC ":libdav1d.so.5")
  target_link_libraries (VideoAnalogiser PUBLIC ":librsvg-2.so.2")
  target_link_libraries (VideoAnalogiser PUBLIC ":libgobject-2.0.so.0")
  target_link_libraries (VideoAnalogiser PUBLIC ":libglib-2.0.so.0")
  target_link_libraries (VideoAnalogiser PUBLIC ":libcairo.so.2")
  target_link_libraries (VideoAnalogiser PUBLIC ":libzvbi.so.0")
  target_link_libraries (VideoAnalogiser PUBLIC ":libz.so.1")
  target_link_libraries (VideoAnalogiser PUBLIC ":libsnappy.so.1")
  target_link_libraries (VideoAnalogiser PUBLIC ":libaom.so.3")
  target_link_libraries (VideoAnalogiser PUBLIC ":libcodec2.so.1.0")
  target_link_libraries (VideoAnalogiser PUBLIC ":libgsm.so.1")
  target_link_libraries (VideoAnalogiser PUBLIC ":libmp3lame.so.0")
  target_link_libraries (VideoAnalogiser PUBLIC ":libopenjp2.so.7")
  target_link_libraries (VideoAnalogiser PUBLIC ":libopus.so.0")
  target_link_libraries (VideoAnalogiser PUBLIC ":libshine.so.3")
  target_link_libraries (VideoAnalogiser PUBLIC ":libspeex.so.1")
  target_link_libraries (VideoAnalogiser PUBLIC ":libtheoraenc.so.1")
  target_link_libraries (VideoAnalogiser PUBLIC ":libtheoradec.so.1")
  target_link_libraries (VideoAnalogiser PUBLIC ":libtwolame.so.0")
  target_link_libraries (VideoAnalogiser PUBLIC ":libvorbis.so.0")
  target_link_libraries (VideoAnalogiser PUBLIC ":libvorbisenc.so.2")
  target_link_libraries (VideoAnalogiser PUBLIC ":libx264.so.163")
  target_link_libraries (VideoAnalogiser PUBLIC ":libx265.so.199")
  target_link_libraries (VideoAnalogiser PUBLIC ":libxvidcore.so.4")
  target_link_libraries (VideoAnalogiser PUBLIC ":libva.so.2")
  target_link_libraries (VideoAnalogiser PUBLIC ":libmfx.so.1")
  target_link_libraries (VideoAnalogiser PUBLIC ":libxml2.so.2")
  target_link_libraries (VideoAnalogiser PUBLIC ":libX11.so.6")
  target_link_libraries (VideoAnalogiser PUBLIC ":libsoxr.so.0")
  target_link_libraries (VideoAnalogiser PUBLIC ":libva-drm.so.2")
  target_link_libraries (VideoAnalogiser PUBLIC ":libdrm.so.2")
  target_link_libraries (VideoAnalogiser PUBLIC ":libva-x11.so.2")
  target_link_libraries (VideoAnalogiser PUBLIC ":libvdpau.so.1")
  target_link_libraries (VideoAnalogiser PUBLIC ":libOpenCL.so.1")
  target_link_libraries (VideoAnalogiser PUBLIC ":libssh.so.4")
  target_link_libraries (VideoAnalogiser PUBLIC ":libgme.so.0")
  target_link_libraries (VideoAnalogiser PUBLIC ":libopenmpt.so.0")
  target_link_libraries (VideoAnalogiser PUBLIC ":libzmq.so.5")
  target_link_libraries (VideoAnalogiser PUBLIC ":libsrt-gnutls.so.1.4")
  target_link_libraries (VideoAnalogiser PUBLIC ":libgnutls.so.30")
  target_link_libraries (VideoAnalogiser PUBLIC ":libchromaprint.so.1")
  target_link_libraries (VideoAnalogiser PUBLIC ":libbz2.so.1")
  target_link_libraries (VideoAnalogiser PUBLIC ":libbluray.so.2")
endif()